fix deploy final